# rate-limiter

./: README.md  docker-compose.yml  test_api.sh
backend/: Dockerfile  docker_entrypoint.sh  main.py  pyproject.toml  run_main.py
backend/config/: __init__.py  constants.py  logger.py
backend/src/lib/: exception_handler.py
backend/src/middlewares/: rate_limiter.py
backend/src/router/: test_router.py
deployment/: redis.conf
